added two new blogs

--- a/index.html
+++ b/index.html
@@ -15,5 +15,21 @@
         sequi, aliquam odio distinctio minus vero saepe qui itaque maxime!
       </p>
     </div>
+    <div>
+      <h3>MY Second blog</h3>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
+        totam temporibus quo ex aspernatur corrupti magni non modi neque eos
+        sequi, aliquam odio distinctio minus vero saepe qui itaque maxime!
+      </p>
+    </div>
+    <div>
+      <h3>My third blog</h3>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
+        totam temporibus quo ex aspernatur corrupti magni non modi neque eos
+        sequi, aliquam odio distinctio minus vero saepe qui itaque maxime!
+      </p>
+    </div>
   </body>
 </html>
