--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <h3>MY FIRST WEBSITE</h3>
+      <h3>MY FIRST BLOG!!!</h3>
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
         totam temporibus quo ex aspernatur corrupti magni non modi neque eos
@@ -30,6 +30,14 @@
         totam temporibus quo ex aspernatur corrupti magni non modi neque eos
         sequi, aliquam odio distinctio minus vero saepe qui itaque maxime!
       </p>
+    </div>
+    <div>
+      <h3>How to push incremental code</h3>
+      <ul>
+        <li>git add .</li>
+        <li>git commit -m"your commit message"</li>
+        <li>git push</li>
+      </ul>
     </div>
   </body>
 </html>
