--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </p>
     </div>
     <div>
-      <h3>How to push incremental code</h3>
+      <h3>How to push incremental code using git</h3>
       <ul>
         <li>git add .</li>
         <li>git commit -m"your commit message"</li>
