trying to solve

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         totam temporibus quo ex aspernatur corrupti magni non modi neque eos
         sequi, aliquam odio distinctio minus vero saepe qui itaque maxime!
       </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate
+        totam temporibus quo ex aspernatur corrupti magni non modi neque eos
+        sequi, aliquam odio distinctio minus vero saepe qui itaque maxime!
+      </p>
     </div>
     <div>
       <h3>My third blog</h3>
